# waifupics-rs

./: Cargo.toml  README.md
examples/: raw_get_with_client.rs  simple.rs  with_client.rs
src/: lib.rs
