[package]
name = "waifupics-rs"
version = "0.1.0"
edition = "2018"
license = "CC0-1.0"
license-file = "LICENSE"
repository = "https://github.com/notmarek/waifupics-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version="1", features=["derive"] }
thiserror = "1"

[dev-dependencies]
tokio = { version="1", features=["full"] }