[package]
name = "waifupics-rs"
version = "0.1.1"
edition = "2018"
description = "Rust wrapper for waifu.pics."
license = "CC0-1.0"
repository = "https://github.com/notmarek/waifupics-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version="1", features=["derive"] }
thiserror = "1"

[dev-dependencies]
tokio = { version="1", features=["full"] }
